kubeflow/helm/pipelines/dryrun/metadata/envoy/kubeflow-pipelines-metadata-envoy_Service.yml
# Source: pipelines/templates/metadata/envoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeflow-pipelines-metadata-envoy
  namespace: kubeflow
  labels:
    helm.sh/chart: pipelines-0.1.89
    app: pipelines
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/instance: kubeflow
    app.kubernetes.io/version: "1.8.1"
    version: "1.8.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: md-envoy
      protocol: TCP
      name: http-md-envoy
    - port: 9901
      targetPort: envoy-admin
      protocol: TCP
      name: http-envoy-admin
  selector:
    app: pipelines-metadata-envoy
    app.kubernetes.io/name: pipelines-metadata-envoy
    app.kubernetes.io/instance: kubeflow
